Jumpy headers fix

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -343,8 +343,9 @@ article img {
 	}
 }
 
-.about-page {
-	margin-top: 75px;
+.about-page,
+.contact-page {
+	margin-top: 75px !important;
 }
 
 // Contact page
